--- a/packages/webapp/package.json
+++ b/packages/webapp/package.json
@@ -17,6 +17,7 @@
     "@dailydotdev/shared": "*",
     "classnames": "^2.3.1",
     "date-fns": "^2.25.0",
+    "date-fns-tz": "1.0.0",
     "dompurify": "^2.3.3",
     "focus-visible": "^5.2.0",
     "graphql": "^15.7.2",
