--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -102,6 +102,7 @@
     "typescript": "^4.4.4"
   },
   "dependencies": {
+    "@tailwindcss/line-clamp": "^0.2.2",
     "amplitude-js": "^8.9.1",
     "balloon-css": "^1.2.0",
     "flagsmith": "^1.6.10",
