fix: :bug: Add to extension as well

--- a/packages/extension/package.json
+++ b/packages/extension/package.json
@@ -48,6 +48,7 @@
     "@babel/preset-react": "^7.16.0",
     "@babel/preset-typescript": "^7.16.0",
     "@dailydotdev/eslint-config": "*",
+    "eslint-plugin-daily": "*",
     "@dailydotdev/prettier-config": "*",
     "@svgr/cli": "^5.5.0",
     "@svgr/webpack": "^5.5.0",
