--- a/packages/webapp/package.json
+++ b/packages/webapp/package.json
@@ -14,6 +14,7 @@
   },
   "prettier": "@dailydotdev/prettier-config",
   "dependencies": {
+    "@dailydotdev/react-contexify": "^5.0.0",
     "@dailydotdev/shared": "*",
     "classnames": "^2.3.1",
     "date-fns": "^2.25.0",
@@ -30,7 +31,6 @@
     "preact": "^10.5.15",
     "preact-render-to-string": "^5.1.19",
     "react": "npm:@preact/compat@0.0.3",
-    "@dailydotdev/react-contexify": "^5.0.0",
     "react-dom": "npm:@preact/compat@0.0.3",
     "react-flip-toolkit": "^7.0.13",
     "react-intersection-observer": "^8.32.2",
@@ -44,6 +44,7 @@
   "devDependencies": {
     "@babel/preset-typescript": "^7.16.0",
     "@dailydotdev/eslint-config": "*",
+    "@dailydotdev/eslint-plugin-daily-dev-eslint-rules": "*",
     "@dailydotdev/prettier-config": "*",
     "@next/bundle-analyzer": "^10.2.3",
     "@svgr/cli": "^5.5.0",
