--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -104,6 +104,7 @@
   },
   "dependencies": {
     "@tailwindcss/line-clamp": "^0.2.2",
+    "@tippyjs/react": "^4.2.5",
     "amplitude-js": "^8.9.1",
     "balloon-css": "^1.2.0",
     "flagsmith": "^1.6.10",
