--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -108,10 +108,10 @@
     "amplitude-js": "^8.9.1",
     "balloon-css": "^1.2.0",
     "flagsmith": "^1.6.10",
+    "graphql-ws": "^5.5.5",
     "lazysizes": "^5.3.2",
     "linkifyjs": "^2.1.9",
     "lodash.clonedeep": "^4.5.0",
-    "node-fetch": "^2.6.6",
-    "subscriptions-transport-ws": "^0.9.19"
+    "node-fetch": "^2.6.6"
   }
 }
