--- a/packages/extension/src/manifest.json
+++ b/packages/extension/src/manifest.json
@@ -25,7 +25,10 @@
   "optional_permissions": [
     "topSites"
   ],
-  "content_security_policy": "script-src 'self' https://www.google-analytics.com; object-src 'self'",
+  "content_security_policy": {
+    "extension_pages": "object-src 'self'",
+    "sandbox": "script-src 'self' https://www.google-analytics.com"
+  },
   "__firefox__content_security_policy": "object-src 'self'",
   "browser_action": {
     "default_icon": {
