--- a/packages/extension/src/manifest.json
+++ b/packages/extension/src/manifest.json
@@ -30,7 +30,7 @@
     "sandbox": "script-src 'self' https://www.google-analytics.com"
   },
   "__firefox__content_security_policy": "object-src 'self'",
-  "browser_action": {
+  "action": {
     "default_icon": {
       "16": "icons/action_16.png",
       "32": "icons/action_32.png"
