--- a/packages/extension/package.json
+++ b/packages/extension/package.json
@@ -18,6 +18,7 @@
   "prettier": "@dailydotdev/prettier-config",
   "dependencies": {
     "@babel/runtime": "^7.16.0",
+    "@dailydotdev/react-contexify": "^5.0.0",
     "@dailydotdev/shared": "*",
     "classnames": "^2.3.1",
     "date-fns": "^2.25.0",
@@ -31,7 +32,6 @@
     "preact": "^10.5.15",
     "preact-render-to-string": "^5.1.19",
     "react": "npm:@preact/compat@0.0.3",
-    "@dailydotdev/react-contexify": "^5.0.0",
     "react-dom": "npm:@preact/compat@0.0.3",
     "react-intersection-observer": "^8.32.2",
     "react-modal": "^3.14.3",
@@ -39,7 +39,7 @@
     "react-tooltip": "^4.2.21",
     "react-transition-group": "^4.4.2",
     "react-virtual": "^2.8.2",
-    "webextension-polyfill-ts": "^0.22.0"
+    "webextension-polyfill": "^0.8.0"
   },
   "devDependencies": {
     "@babel/core": "^7.16.0",
@@ -65,6 +65,7 @@
     "@types/react": "^17.0.34",
     "@types/react-modal": "^3.13.1",
     "@types/react-transition-group": "^4.4.4",
+    "@types/webextension-polyfill": "^0.8.2",
     "@types/webpack": "^4.41.31",
     "@typescript-eslint/eslint-plugin": "^4.33.0",
     "@typescript-eslint/parser": "^4.33.0",
