fix: :bug: Fix build error

--- a/packages/extension/package.json
+++ b/packages/extension/package.json
@@ -18,6 +18,7 @@
   "prettier": "@dailydotdev/prettier-config",
   "dependencies": {
     "@babel/runtime": "^7.16.0",
+    "@dailydotdev/react-contexify": "^5.0.0",
     "@dailydotdev/shared": "*",
     "classnames": "^2.3.1",
     "date-fns": "^2.25.0",
@@ -31,11 +32,11 @@
     "preact": "^10.5.15",
     "preact-render-to-string": "^5.1.19",
     "react": "npm:@preact/compat@0.0.3",
-    "@dailydotdev/react-contexify": "^5.0.0",
     "react-dom": "npm:@preact/compat@0.0.3",
     "react-intersection-observer": "^8.32.2",
     "react-modal": "^3.14.3",
     "react-query": "^3.31.0",
+    "react-swipeable": "^6.2.0",
     "react-tooltip": "^4.2.21",
     "react-transition-group": "^4.4.2",
     "react-virtual": "^2.8.2",
