--- a/packages/webapp/package.json
+++ b/packages/webapp/package.json
@@ -62,6 +62,8 @@
     "@types/node": "^14.18.3",
     "@types/node-fetch": "^2.5.12",
     "@types/react": "^17.0.38",
+    "@types/react-dom": "^17.0.11",
+    "@types/react-router-dom": "^5.3.2",
     "@types/react-modal": "^3.13.1",
     "@types/react-transition-group": "^4.4.4",
     "@typescript-eslint/eslint-plugin": "^4.33.0",
