--- a/packages/extension/src/manifest.json
+++ b/packages/extension/src/manifest.json
@@ -16,13 +16,8 @@
     "https://dailynow.co/",
     "https://*.dailynow.co/"
   ],
-  "__dev__permissions": [
-    "storage",
-    "http://localhost/"
-  ],
-  "optional_permissions": [
-    "topSites"
-  ],
+  "__dev__permissions": ["storage", "http://localhost/"],
+  "optional_permissions": ["topSites"],
   "content_security_policy": "script-src 'self' https://www.google-analytics.com; object-src 'self'",
   "__firefox__content_security_policy": "object-src 'self'",
   "browser_action": {
@@ -32,17 +27,19 @@
     }
   },
   "background": {
-    "scripts": [
-      "js/background.bundle.js"
-    ],
+    "scripts": ["js/background.bundle.js"],
     "__chrome|opera__persistent": true
   },
   "chrome_url_overrides": {
     "newtab": "index.html"
   },
-  "web_accessible_resources": [
-    "index.html"
+  "content_scripts": [
+    {
+      "matches": ["<all_urls>"],
+      "js": ["js/content.bundle.js"]
+    }
   ],
+  "web_accessible_resources": ["index.html"],
   "__firefox__browser_specific_settings": {
     "gecko": {
       "strict_min_version": "54.0"
