--- a/packages/webapp/package.json
+++ b/packages/webapp/package.json
@@ -26,6 +26,7 @@
     "idb-keyval": "^5.1.5",
     "next": "^11.1.3",
     "next-plugin-preact": "^3.0.6",
+    "@prefresh/next": "^1.5.0",
     "next-pwa": "^5.4.4",
     "next-seo": "^4.28.1",
     "preact": "^10.6.4",
@@ -40,8 +41,7 @@
     "react-swipeable": "^6.2.0",
     "react-tooltip": "^4.2.21",
     "react-transition-group": "^4.4.2",
-    "react-virtual": "^2.10.0",
-    "webpack": "^5.65.0"
+    "react-virtual": "^2.10.0"
   },
   "devDependencies": {
     "@babel/preset-typescript": "^7.16.5",
@@ -51,6 +51,7 @@
     "@next/bundle-analyzer": "^10.2.3",
     "@svgr/cli": "^5.5.0",
     "@svgr/webpack": "^5.5.0",
+    "@prefresh/webpack": "^3.3.2",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/preact": "^2.0.1",
     "@testing-library/user-event": "^13.5.0",
@@ -89,7 +90,7 @@
     "identity-obj-proxy": "^3.0.0",
     "jest": "^26.6.3",
     "jest-junit": "^12.3.0",
-    "next-transpile-modules": "^8.0.0",
+    "next-transpile-modules": "^9.0.0",
     "nock": "^13.2.1",
     "node-fetch": "^2.6.6",
     "postcss": "^8.4.5",
