--- a/packages/extension/package.json
+++ b/packages/extension/package.json
@@ -17,56 +17,56 @@
   },
   "prettier": "@dailydotdev/prettier-config",
   "dependencies": {
-    "@babel/runtime": "^7.16.0",
+    "@babel/runtime": "^7.16.7",
     "@dailydotdev/react-contexify": "^5.0.0",
     "@dailydotdev/shared": "*",
     "classnames": "^2.3.1",
-    "date-fns": "^2.25.0",
+    "date-fns": "^2.28.0",
     "date-fns-tz": "1.0.0",
-    "dompurify": "^2.3.3",
+    "dompurify": "^2.3.4",
     "focus-visible": "^5.2.0",
-    "graphql": "^15.7.2",
-    "graphql-request": "^3.6.1",
+    "graphql": "^15.8.0",
+    "graphql-request": "^3.7.0",
     "idb-keyval": "^5.1.5",
-    "next": "^11.1.2",
-    "preact": "^10.5.15",
+    "next": "^11.1.3",
+    "preact": "^10.6.4",
     "preact-render-to-string": "^5.1.19",
     "react": "npm:@preact/compat@0.0.3",
     "react-dom": "npm:@preact/compat@0.0.3",
-    "react-intersection-observer": "^8.32.2",
-    "react-modal": "^3.14.3",
-    "react-query": "^3.31.0",
+    "react-intersection-observer": "^8.33.1",
+    "react-modal": "^3.14.4",
+    "react-query": "^3.34.8",
     "react-swipeable": "^6.2.0",
     "react-tooltip": "^4.2.21",
     "react-transition-group": "^4.4.2",
-    "react-virtual": "^2.8.2",
+    "react-virtual": "^2.10.0",
     "webextension-polyfill-ts": "^0.22.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.16.0",
-    "@babel/plugin-transform-runtime": "^7.16.0",
-    "@babel/preset-env": "^7.16.0",
-    "@babel/preset-react": "^7.16.0",
-    "@babel/preset-typescript": "^7.16.0",
+    "@babel/core": "^7.16.7",
+    "@babel/plugin-transform-runtime": "^7.16.8",
+    "@babel/preset-env": "^7.16.8",
+    "@babel/preset-react": "^7.16.7",
+    "@babel/preset-typescript": "^7.16.7",
     "@dailydotdev/eslint-config": "*",
     "@dailydotdev/eslint-plugin-daily-dev-eslint-rules": "*",
     "@dailydotdev/prettier-config": "*",
     "@svgr/cli": "^5.5.0",
     "@svgr/webpack": "^5.5.0",
-    "@testing-library/jest-dom": "^5.15.0",
+    "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/preact": "^2.0.1",
     "@testing-library/user-event": "^13.5.0",
     "@types/classnames": "^2.2.11",
-    "@types/dompurify": "^2.3.1",
+    "@types/dompurify": "^2.3.3",
     "@types/google.analytics": "0.0.41",
     "@types/jest": "^26.0.24",
     "@types/nock": "^11.1.0",
-    "@types/node": "^14.17.32",
+    "@types/node": "^14.18.9",
     "@types/node-fetch": "^2.5.12",
-    "@types/react": "^17.0.34",
+    "@types/react": "^17.0.38",
     "@types/react-modal": "^3.13.1",
     "@types/react-transition-group": "^4.4.4",
-    "@types/webpack": "^4.41.31",
+    "@types/webpack": "^4.41.32",
     "@typescript-eslint/eslint-plugin": "^4.33.0",
     "@typescript-eslint/parser": "^4.33.0",
     "autoprefixer": "^10.4.2",
@@ -76,34 +76,34 @@
     "babel-plugin-macros": "^3.0.1",
     "babel-plugin-module-resolver": "^4.1.0",
     "babel-plugin-react-remove-properties": "^0.3.0",
-    "clean-webpack-plugin": "^3.0.0",
-    "copy-webpack-plugin": "^6.3.1",
+    "clean-webpack-plugin": "^4.0.0",
+    "copy-webpack-plugin": "^10.2.0",
     "cross-env": "^7.0.2",
     "css-loader": "^5.2.7",
     "dotenv-webpack": "^7.0.3",
     "eslint": "^7.32.0",
     "eslint-config-airbnb-typescript": "^12.3.1",
     "eslint-config-prettier": "^8.1.0",
-    "eslint-plugin-import": "^2.25.2",
-    "eslint-plugin-jest-dom": "^3.9.2",
-    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-jest-dom": "^3.9.4",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-prettier": "^3.4.1",
-    "eslint-plugin-react": "^7.26.1",
-    "eslint-plugin-react-hooks": "^4.2.0",
-    "eslint-plugin-tailwindcss": "^1.17.0",
+    "eslint-plugin-react": "^7.28.0",
+    "eslint-plugin-react-hooks": "^4.3.0",
+    "eslint-plugin-tailwindcss": "^1.17.2",
     "eslint-plugin-testing-library": "^4.12.4",
     "fake-indexeddb": "^3.1.7",
-    "filemanager-webpack-plugin": "^3.0.0-alpha.7",
-    "fork-ts-checker-webpack-plugin": "^6.4.0",
-    "html-webpack-plugin": "^4.5.0",
+    "filemanager-webpack-plugin": "^6.1.7",
+    "fork-ts-checker-webpack-plugin": "^6.5.0",
+    "html-webpack-plugin": "^5.5.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^26.6.3",
     "jest-junit": "^12.3.0",
     "mini-css-extract-plugin": "^1.6.2",
-    "nock": "^13.1.4",
-    "node-fetch": "^2.6.6",
+    "nock": "^13.2.2",
+    "node-fetch": "^2.6.7",
     "node-sass": "^4.14.1",
-    "optimize-css-assets-webpack-plugin": "^5.0.8",
+    "optimize-css-assets-webpack-plugin": "^6.0.1",
     "postcss": "^8.4.5",
     "postcss-custom-media": "^8.0.0",
     "postcss-focus-visible": "^5.0.0",
@@ -112,18 +112,18 @@
     "postcss-mixins": "^8.1.0",
     "postcss-nesting": "^7.0.1",
     "postcss-simple-vars": "^6.0.3",
-    "prettier": "^2.4.1",
+    "prettier": "^2.5.1",
     "resolve-url-loader": "^3.1.4",
     "stylelint": "^13.12.0",
     "stylelint-config-recommended": "^4.0.0",
     "subscriptions-transport-ws": "^0.9.19",
-    "tailwindcss": "^3.0.11",
-    "terser-webpack-plugin": "^4.2.3",
+    "tailwindcss": "^3.0.15",
+    "terser-webpack-plugin": "^5.3.0",
     "ts-jest": "^26.5.4",
-    "typescript": "^4.4.4",
+    "typescript": "^4.5.4",
     "webpack": "^5.66.0",
     "webpack-cli": "^4.9.1",
-    "webpack-extension-reloader": "^1.1.4",
+    "webpack-ext-reloader": "^1.1.8",
     "wext-manifest-loader": "^2.2.1",
     "wext-manifest-webpack-plugin": "^1.2.1"
   }
