--- a/packages/extension/package.json
+++ b/packages/extension/package.json
@@ -121,9 +121,9 @@
     "terser-webpack-plugin": "^4.2.3",
     "ts-jest": "^26.5.4",
     "typescript": "^4.4.4",
-    "webpack": "^4.44.2",
+    "webpack": "^5.66.0",
     "webpack-cli": "^4.9.1",
-    "webpack-extension-reloader": "^1.1.4",
+    "webpack-ext-reloader": "^1.1.8",
     "wext-manifest-loader": "^2.2.1",
     "wext-manifest-webpack-plugin": "^1.2.1"
   }
