--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -20,9 +20,9 @@
     "graphql": "^15.5.0",
     "graphql-request": "^3.4.0",
     "idb-keyval": "^5.0.6",
-    "next": "^10.2.3",
-    "react": "^17.0.5",
-    "react-dom": "^17.0.5",
+    "next": "^11.1.3",
+    "react": "^16.0.0",
+    "react-dom": "^16.0.0",
     "react-intersection-observer": "^8.31.0",
     "react-modal": "^3.14.3",
     "react-query": "^3.19.0",
@@ -51,6 +51,8 @@
     "@types/lodash.clonedeep": "^4.5.6",
     "@types/nock": "^11.1.0",
     "@types/react": "^17.0.34",
+    "@types/react-dom": "^17.0.11",
+    "@types/react-router-dom": "^5.3.2",
     "@types/react-modal": "^3.13.1",
     "@typescript-eslint/eslint-plugin": "^4.33.0",
     "@typescript-eslint/parser": "^4.33.0",
@@ -80,7 +82,7 @@
     "identity-obj-proxy": "^3.0.0",
     "jest": "^26.6.3",
     "jest-junit": "^12.3.0",
-    "next": "^11.1.2",
+    "next": "^11.1.3",
     "nock": "^13.1.4",
     "postcss": "^8.4.5",
     "postcss-custom-media": "^8.0.0",
@@ -94,7 +96,7 @@
     "react-dom": "^17.0.2",
     "react-intersection-observer": "^8.32.2",
     "react-modal": "^3.14.3",
-    "react-query": "^3.31.0",
+    "react-query": "^3.34.8",
     "react-transition-group": "^4.4.2",
     "react-virtual": "^2.8.2",
     "stylelint": "^13.13.1",
