feat: companion styling and functions

--- a/packages/extension/src/manifest.json
+++ b/packages/extension/src/manifest.json
@@ -37,10 +37,10 @@
     {
       "matches": ["<all_urls>"],
       "css": ["css/content.css"],
-      "js": ["js/content.bundle.js"]
+      "js": ["js/content.bundle.js", "js/companion.bundle.js"]
     }
   ],
-  "web_accessible_resources": ["index.html", "companion.html"],
+  "web_accessible_resources": ["index.html", "companion.html", "js/companion.bundle.js"],
   "__firefox__browser_specific_settings": {
     "gecko": {
       "strict_min_version": "54.0"
