--- a/packages/extension/package.json
+++ b/packages/extension/package.json
@@ -36,6 +36,7 @@
     "react-intersection-observer": "^8.32.2",
     "react-modal": "^3.14.3",
     "react-query": "^3.31.0",
+    "react-shadow-root": "^6.1.1",
     "react-swipeable": "^6.2.0",
     "react-tooltip": "^4.2.21",
     "react-transition-group": "^4.4.2",
