--- a/packages/extension/src/manifest.json
+++ b/packages/extension/src/manifest.json
@@ -36,11 +36,10 @@
   "content_scripts": [
     {
       "matches": ["<all_urls>"],
-      "css": ["css/content.css"],
       "js": ["js/content.bundle.js", "js/companion.bundle.js"]
     }
   ],
-  "web_accessible_resources": ["index.html", "companion.html", "js/companion.bundle.js"],
+  "web_accessible_resources": ["index.html", "companion.html", "js/companion.bundle.js", "css/companion.css"],
   "__firefox__browser_specific_settings": {
     "gecko": {
       "strict_min_version": "54.0"
