--- a/packages/extension/src/manifest.json
+++ b/packages/extension/src/manifest.json
@@ -36,6 +36,7 @@
   "content_scripts": [
     {
       "matches": ["<all_urls>"],
+      "css": ["css/content.css"],
       "js": ["js/content.bundle.js", "js/companion.bundle.js"]
     }
   ],
