--- a/packages/extension/package.json
+++ b/packages/extension/package.json
@@ -112,6 +112,7 @@
     "postcss-loader": "^4.0.4",
     "postcss-mixins": "^8.1.0",
     "postcss-nesting": "^7.0.1",
+    "postcss-rem-to-responsive-pixel": "^5.1.1",
     "postcss-simple-vars": "^6.0.3",
     "prettier": "^2.4.1",
     "resolve-url-loader": "^3.1.4",
