Fix failing test, and cleanup sync between apps

--- a/packages/shared/.stylelintrc
+++ b/packages/shared/.stylelintrc
@@ -19,6 +19,7 @@
       true,
       {
         "ignoreTypes": [
+          "daily-companion-app",
           "/-styled-mixin/",
           "$dummyValue"
         ]
