test: Refactor some of the test cases

--- a/packages/extension/.stylelintrc
+++ b/packages/extension/.stylelintrc
@@ -17,6 +17,7 @@
       true,
       {
         "ignoreTypes": [
+          "daily-companion-app",
           "/-styled-mixin/",
           "$dummyValue"
         ]
