--- a/packages/extension/package.json
+++ b/packages/extension/package.json
@@ -116,6 +116,7 @@
     "postcss-simple-vars": "^6.0.3",
     "prettier": "^2.4.1",
     "resolve-url-loader": "^3.1.4",
+    "@open-wc/testing": "^2.1.2",
     "stylelint": "^13.12.0",
     "stylelint-config-recommended": "^4.0.0",
     "subscriptions-transport-ws": "^0.9.19",
