--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -113,6 +113,7 @@
     "lazysizes": "^5.3.2",
     "linkifyjs": "^2.1.9",
     "lodash.clonedeep": "^4.5.0",
-    "node-fetch": "^2.6.6"
+    "node-fetch": "^2.6.6",
+    "uuid": "^8.3.2"
   }
 }
