--- a/packages/webapp/package.json
+++ b/packages/webapp/package.json
@@ -2,7 +2,7 @@
   "name": "webapp",
   "version": "0.0.0",
   "scripts": {
-    "dev": "next dev -p 5002",
+    "dev": "env TAILWIND_MODE=watch NODE_ENV=development next dev -p 5002",
     "build": "next build",
     "start": "next start",
     "lint:css": "stylelint '**/*.{ts,tsx,css}'",
@@ -102,7 +102,7 @@
     "stylelint": "^13.13.1",
     "stylelint-config-recommended": "^4.0.0",
     "subscriptions-transport-ws": "^0.9.19",
-    "tailwindcss": "^3.0.11",
+    "tailwindcss": "^3.0.23",
     "ts-jest": "^26.5.4",
     "typescript": "^4.5.4",
     "vercel": "^21.3.3"
