--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,13 +1,33 @@
 # List the ports you want to expose and what to do when they are served. See https://www.gitpod.io/docs/config-ports/
 ports:
   - port: 5002
-    onOpen: open-preview
+    onOpen: open-browser
+  - port: 4000
+    onOpen: ignore
+    visibility: public
+  - port: 5000
+    onOpen: ignore
+    visibility: public
+  - port: 6379
+    onOpen: ignore
+  - port: 3306
+    onOpen: ignore
+  - port: 5432
+    onOpen: ignore
 
 # List the start up tasks. You can start them in parallel in multiple terminals. See https://www.gitpod.io/docs/config-start-tasks/
 tasks:
   - name: docker-compose
     init: docker-compose pull
     command: docker-compose up
+  - name: seed
+    init: |
+      ./wait-for.sh localhost:5432
+      ./wait-for.sh localhost:3306
+    command: |
+      docker exec apps-daily-api-1 node ./node_modules/typeorm/cli.js migration:run
+      docker exec apps-daily-gateway-1 yarn run db:migrate:latest
+      docker exec apps-daily-api-1 node bin/import.js
   - name: webapp
     before: |
       nvm install
