--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -25,6 +25,7 @@ tasks:
       sudo apt-get update
       sudo apt-get install -y netcat
     init: |
+      sleep 30
       ./wait-for.sh localhost:5432
       ./wait-for.sh localhost:3306
     command: |
