--- a/packages/webapp/package.json
+++ b/packages/webapp/package.json
@@ -2,7 +2,7 @@
   "name": "webapp",
   "version": "0.0.0",
   "scripts": {
-    "dev": "TAILWIND_MODE=watch next dev -p 5002",
+    "dev": "next dev -p 5002",
     "build": "next build",
     "start": "next start",
     "lint:css": "stylelint '**/*.{ts,tsx,css}'",
