--- a/packages/extension/.env.production
+++ b/packages/extension/.env.production
@@ -4,5 +4,6 @@ NEXT_PUBLIC_DOMAIN=daily.dev
 NEXT_PUBLIC_GA=UA-109059578-1
 NEXT_PUBLIC_AMPLITUDE=ee64cef405fb51cba273308cfcef7228
 NEXT_PUBLIC_FLAGSMITH=8gucquFbJSKT7kYDKpqZzp
+NEXT_PUBLIC_COMMUNITY_LINKS_LIMIT=3
 
 NEXT_PUBLIC_WEBAPP_URL=https://app.daily.dev/
