--- a/packages/webapp/.env
+++ b/packages/webapp/.env
@@ -5,5 +5,6 @@ NEXT_PUBLIC_DOMAIN=localhost
 NEXT_PUBLIC_GA=UA-109059578-2
 NEXT_PUBLIC_AMPLITUDE=46a18c8e538f37fbb74150e458b5c574
 NEXT_PUBLIC_FLAGSMITH=LZp89Rk56sytKH9AeHyCtF
+NEXT_PUBLIC_COMMUNITY_LINKS_LIMIT=3
 
 NEXT_PUBLIC_WEBAPP_URL=/
