revert: app title in manifest

--- a/packages/extension/src/manifest.json
+++ b/packages/extension/src/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 2,
   "version": "0.0.0",
-  "name": "daily.dev | BETA (optional)",
+  "name": "daily.dev | The Homepage Developers Deserve",
   "short_name": "daily.dev",
   "description": "Get a feed of the hottest developer news personalized to you.",
   "homepage_url": "https://daily.dev",
